--- a/Atividade01/.htaccess
+++ b/Atividade01/.htaccess
@@ -3,4 +3,4 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule ^(.+)$ index.php?route=$1 [QSL,L]
+RewriteRule ^(.+)$ index.php?route=$1 [QSA,L]
